--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,19 @@ body {
   line-height: 1.6;
   color: #4BA7A8;
   font-family: Jost;
-  font-size: 18;
+  font-size: 2vh;
   /* background-color: #395592; */
+}
+
+img {
+  border-radius: 20px;
+  opacity: 80%;
+  filter: drop-shadow(0 0 5px black);
+  transition: size 0.5s ease;
+}
+
+.img:hover {
+  width: 200%
 }
 
 ul {
@@ -21,18 +32,28 @@ a {
 }
 
 .navbar {
-  display: flex;
+  
+  display: none;
   justify-content: space-between;
   align-items: center;
   padding: 0.7rem 2rem;
   position: fixed;
   z-index: 1;
   width: 100%;
+  height: 7vh;
   top: 0;
-  opacity: 0.9;
+  opacity: 0.8;
   color: white;
-  background-color: #24a19c;
+  background-color: #000000;
+  transition: opacity 0.3s, 
+  
 }
+
+.navbar:hover {
+  opacity: 1;
+  
+}
+
 
 .navbar ul {
   display: flex;
@@ -42,13 +63,15 @@ a {
   color: #fff;
   padding: 0.45rem;
   margin: 0 0.25rem;
-  transition: opacity 200ms ease-in;
+  transition: color 0.1s ease-in;
   
 }
 
-.navbar a:hover {
-  opacity: 0.8;
+.navbar a:hover{
+  color: rgb(230, 93, 93)
+  /* opacity: 80%; */
 }
+
 
 
 .landing {
@@ -61,7 +84,7 @@ a {
   align-items: center;
   justify-content: center;
   text-align: center;
-  background: url(./components//img/back.jpg) no-repeat center center/cover;
+  background: radial-gradient(#cc2b5e, #753a88)
 }
 
 .landing-inner {
@@ -73,8 +96,32 @@ a {
   align-items: center;
   justify-content: center;
   text-align: center;
-  font-size: 1.5rem;
-  
+  font-size: 3vh;
+  transition: font-size 0.3s ease-in;
+}
+
+.landing-inner a{
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border: 2px solid rgb(255, 255, 255, 0.5);
+  border-radius: 20px;
+
+}
+
+.trip {
+  padding: 2.5vw;
+  width: 100%;
+  transition: font-size 0.4s ease-in, border 0.4s ease-in;
+}
+
+.trip:hover {
+  font-size: 3.5vh;
+  /* border: 2px solid rgba(252, 243, 243, 0.158); */
+  border-radius: 50px;
 }
 .landing-inner1 {
   height: 100%;
@@ -109,29 +156,13 @@ a {
 
 .dark-overlay {
   
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(0, 0, 0, 0.3);
     top: 0;
     left: 0;
     position: absolute;
     width: 100%;
     height: 100vh;
   
-}
-
-section#home {
-  background: url('https://source.unsplash.com/bZZp1PmHI0E/1600x900') no-repeat center center/cover;;
-}
-
-section#about {
-  background: url('https://source.unsplash.com/VRxo0yY-gyM/1600x900') no-repeat center center/cover;;
-}
-
-section#service {
-  background: url('https://source.unsplash.com/K2tdx2mFDHc/1600x900') no-repeat center center/cover;;
-}
-
-section#contact {
-  background: url('https://source.unsplash.com/2aAHlfDOhJM/1600x900') no-repeat center center/cover;;
 }
 
 
